cicd-pipeline-optimization/k8s/deploy-be.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  name: backend
  namespace: demo
  labels:
    app: be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: be
  template:
    metadata:
      labels:
        app: be
    spec:
      containers:
        - name: backend-container
          image: peidhhn/backend-nodejs:v2
          ports:
            - containerPort: 5000
