cicd-pipeline-optimization/k8s/deploy-fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: demo
  labels:
    app: fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fe
  template:
    metadata:
      labels:
        app: fe
    spec:
      containers:
        - name: frontend
          image: peidhhn/frontend-nodejs:v2
          ports:
            - containerPort: 3000
