cicd-pipeline-optimization/k8s/svc-fe.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: demo
spec:
  type: ClusterIP
  selector:
    app: fe
  ports:
    - port: 3000
      targetPort: 3000
